# diplom

./: .gitignore  README.md
Doc/: 3_Zadanie_VKR_doc.docx  jpeg-format.txt  Оферта.doc
Hypothesis/Scripts/: TEST6.txt  periodchecker.py  periodcheckertests.py  sequenceforperiod.py
Hypothesis/period/: CMakeLists.txt  Function.cpp  Function.h  main.cpp
JPEGEncoding/Scripts/: golombplus.py  result  test.py
JPEGapp/jpegapp/: CMakeLists.txt  CMakeListsJPEGClear.txt  CMakeListsJPEGDecompress.txt  CMakeListsJPEGTables.txt  jpegapp.aps  jpegapp.cpp  jpegapp.sln  jpegapp.vcxproj  jpegapp.vcxproj.filters  jpegclear.cpp  jpegcompress.cpp  jpegdecompress.cpp  jpegrgb.cpp  jpegstats.cpp  jpegtables.cpp
JPEGapp/jpegapp/JPEG/: Huffman.cpp  Huffman.h  JPEG.cpp  JPEG.h  ReadFile.cpp  ReadFile.h
JPEGapp/jpegapp/Release/: jpegapp.exe.recipe  jpegapp.iobj  jpegapp.ipdb  jpegapp.vcxproj.FileListAbsolute.txt
JPEGapp/jpegapp/Release/jpegapp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  jpegapp.lastbuildstate  jpegapp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Scripts/: ImageJPEG.py  NSUCRIP2020Prob05.py  golomb.py  test0.tables  test1.jpg.stats  test1.jpg.tables  test2.jpg.Cb.tables  test2.jpg.Cr.tables  test2.jpg.Y.tables  test2.jpg.tables
Диплом/: Диплом.docx  Диплом.ppt  Задание ВКР.docx  Заключение антиплагиат.doc  Отзыв ВКР.doc  Отзыв ВКР.docx  Оферта.doc  Рецензия бланк.doc  Рецензия для Кулакова В.С..doc
Документы/: Диплом.docx
Преддипломная практика/: Индивидуальное задание.docx  Отзыв.docx  Отчёт.docx
(+28 files in other folders)
